--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,9 @@ on:
 env:
   REGISTRY: ghcr.io
   # The image name uses the repository owner and name
-  IMAGE_NAME: ${{ github.repository }}
+  # IMAGE_NAME: {{ github.repository }}
+  # FIX: Convert the image name (which comes from github.repository) to lowercase
+  IMAGE_NAME: ${{ toLower(github.repository) }}
 
 jobs:
   build-scan-and-publish:
@@ -76,7 +78,7 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           load: true # Load the image into the local runner's Docker daemon for scanning
 
-          
+
       # --- STEP 4: DevSecOps Scan with Trivy ---
       - name: 🛡️ Scan Docker image with Trivy
         uses: aquasecurity/trivy-action@master
